feat: update bento, add weather and cuigeng component

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -8,7 +8,7 @@ linkedin: https://www.linkedin.com/in/ufun11
 github: https://github.com/UFUN0220
 ---
 
-## Hi <Twemoji emoji="waving-hand" /> I'm Tuan Anh (aka Leo)
+## Hi <Twemoji emoji="waving-hand" /> I'm Fang You.
 
 I have a passion for all thing **Javascript**.
 I enjoy building eCommerce software and stuff related to web dev.
@@ -17,7 +17,6 @@ I work mainly with **Typescript**, **React**, **Node**, **Remix**, and **NextJS*
 <div className="mb-[1em] mt-[2em] flex items-center justify-between [&>h2]:my-0">
   ## Brief timeline of my career
 </div>
-
 
 ## Why have this blog?
 
