feat: pyq version

--- a/data/blog/dianPing.mdx
+++ b/data/blog/dianPing.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'DianPing debug 2025'
+title: 'Dian Ping debug 2025'
 date: '2025-06-23'
 lastmod: '2026-01-04'
-tags: ['Redis', 'Java', 'Debug']
+tags: ['']
 summary: ''
 images: []
 authors: ['default']
