--- a/data/blog/kaoYan.mdx
+++ b/data/blog/kaoYan.mdx
@@ -2,7 +2,7 @@
 title: '24考研英一85政治65工作量讨论'
 date: '2024-04-02'
 lastmod: '2026-01-02'
-tags: ['UFUN']
+tags: ['']
 summary: ''
 images: []
 authors: ['default']
