--- a/data/blog/waiMai.mdx
+++ b/data/blog/waiMai.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'WaiMai debug 2025'
+title: 'Wai Mai debug 2025'
 date: '2025-07-23'
 lastmod: '2026-01-04'
-tags: ['debug', 'java']
+tags: ['']
 summary: ''
 images: []
 authors: ['default']
