--- a/data/blog/ying1writing.mdx
+++ b/data/blog/ying1writing.mdx
@@ -2,7 +2,7 @@
 title: '24考研英一作文模板'
 date: '2024-04-02'
 lastmod: '2026-01-01'
-tags: ['考研', '英语']
+tags: ['']
 summary: ''
 images: []
 authors: ['default']
@@ -14,27 +14,29 @@ authors: ['default']
 
 ### 1. 对上篇文章的补充说明
 
-* **资料**：考研英语资料我只买了黄皮书。只用了里面的真题和答案解析，作文书没买。**重点：英语答题卡要买**，主要是作文部分，最后默写自己模板的时候用，找手感。政治答题卡不用买，大题背就行了。
-* **网课**：作文我看过 B 站晶婷的视频，不用听她讲，直接找对应的 PPT 暂停截图，效率很高。收集可能可以用到的句子，再自己改写重组。
-* **真题策略**：
-    * **客观题**：刷题看感觉，感觉不好再找对应题型的讲解。
-    * **主观题**：翻译难度不大，翻出大概意思即可。作文我没怎么练真题，我相信背好模板考场上套就行。预测押题都不靠谱，不要在意，把自己准备的模板背好就可以了。
-* **时间线**：
-    * 11.1 - 11.10：刷完 15 套真题客观题。
-    * 11.11 - 12.04：主攻数学专业课。
-    * 12.05 - 12.06：集中准备英语作文。
-    * 考前几天：模拟近三年真题，熟练背诵默写模板。
+- **资料**：考研英语资料我只买了黄皮书。只用了里面的真题和答案解析，作文书没买。**重点：英语答题卡要买**，主要是作文部分，最后默写自己模板的时候用，找手感。政治答题卡不用买，大题背就行了。
+- **网课**：作文我看过 B 站晶婷的视频，不用听她讲，直接找对应的 PPT 暂停截图，效率很高。收集可能可以用到的句子，再自己改写重组。
+- **真题策略**：
+  - **客观题**：刷题看感觉，感觉不好再找对应题型的讲解。
+  - **主观题**：翻译难度不大，翻出大概意思即可。作文我没怎么练真题，我相信背好模板考场上套就行。预测押题都不靠谱，不要在意，把自己准备的模板背好就可以了。
+- **时间线**：
+  - 11.1 - 11.10：刷完 15 套真题客观题。
+  - 11.11 - 12.04：主攻数学专业课。
+  - 12.05 - 12.06：集中准备英语作文。
+  - 考前几天：模拟近三年真题，熟练背诵默写模板。
 
 ### 2. 关于“模板与素材”的定义
 
 本文总结的句式与结构，针对于应试，具有普遍适用性，且符合我的语言习惯。
-* **风格**：不追求高级华丽的用词，尽最大努力**不出错**。
-* **理念**：许多模板给人感觉上限很高，但考场很难写出来。我的想法是**保下限**。
-* **区分**：小作文称为“模板”（结构固定，发挥空间小）；大作文称为“素材”（积累句式，看图说话）。
+
+- **风格**：不追求高级华丽的用词，尽最大努力**不出错**。
+- **理念**：许多模板给人感觉上限很高，但考场很难写出来。我的想法是**保下限**。
+- **区分**：小作文称为“模板”（结构固定，发挥空间小）；大作文称为“素材”（积累句式，看图说话）。
 
 ### 3. 关于“重复率”的担忧
 
 有朋友担心公开模板会和别人重复，我觉得不用担心：
+
 1.  **限制多**：题目要求和字数限制了发挥，正确的表达方式就那几种。
 2.  **容错率**：考研人数众多，绝大部分人即使准备了，考场上也写不出来或写得很粗糙。成文无语法错误且切题，已经是妥妥的高分。
 
@@ -46,8 +48,9 @@ authors: ['default']
 >
 > 网址：[grammarly.com](https://app.grammarly.com)
 > 这是一个最好的语法修改工具。把你改写的文章放上去，它会提供正确的修改意见。注册即可使用，免费版足够。
-> * **Review suggestion**：如果有语法错误一定要改。
-> * **Overall score**：仅供参考，八九十分即可。
+>
+> - **Review suggestion**：如果有语法错误一定要改。
+> - **Overall score**：仅供参考，八九十分即可。
 
 ![Grammarly使用演示](/static/images/articles/kaoyan-english/grammarly-demo.png)
 
@@ -70,8 +73,9 @@ authors: ['default']
 如果是考**通知**（如23年），难度会大一些，因为发挥空间小，格式要求严。
 
 内容上，中国科学家我写了**祖冲之**。先描述成就，再谈影响：
-* 他解决了一些数学难题，发明了不少公式原理，推动了古代中国数学的发展。
-* 不仅在数学方面成果颇丰，作为古代闻名的科学家对后世亦有教育意义与深远影响。
+
+- 他解决了一些数学难题，发明了不少公式原理，推动了古代中国数学的发展。
+- 不仅在数学方面成果颇丰，作为古代闻名的科学家对后世亦有教育意义与深远影响。
 
 主体段就是把上面这两句中文翻译过去。我的方法是**中文思维 -> 翻译英文**，虽然不够地道，但稳。
 
@@ -90,11 +94,11 @@ authors: ['default']
 **考场思路**：
 刚看到题目惊了一下，因为这是**历史首次英一考了图画+图表**（以往这是英二的特征）。但细想，题干给了更多信息，反而不需要自己发散联想，降低了跑题概率。
 
-* **图画内容**：横幅【市民健身区】，右下角说【家门口新建的小公园真不错！】
-* **主体分析**：
-    1.  **市民**（显性）：身体健康，精神愉悦。
-    2.  **政府**（隐性）：从“新建”和图表推断，是政府做出的明智决策。
-* **破题关键**：如果没讨论政府的作用，分数不会高。必须从市民需求和政府决策相辅相成的角度写。
+- **图画内容**：横幅【市民健身区】，右下角说【家门口新建的小公园真不错！】
+- **主体分析**：
+  1.  **市民**（显性）：身体健康，精神愉悦。
+  2.  **政府**（隐性）：从“新建”和图表推断，是政府做出的明智决策。
+- **破题关键**：如果没讨论政府的作用，分数不会高。必须从市民需求和政府决策相辅相成的角度写。
 
 **参考范文**：
 
@@ -120,7 +124,7 @@ authors: ['default']
 >
 > Additionally, it would be beneficial for you to prepare a resume in Chinese. This will not only demonstrate your commitment to working but also make it easier for potential employers to assess your qualifications.
 >
-> *[Optional: Lastly, I recommend... (第三点仅用于凑字数)]*
+> _[Optional: Lastly, I recommend... (第三点仅用于凑字数)]_
 >
 > I genuinely hope that you find these suggestions constructive. Please do let me know if there's anything else I can assist you with. I eagerly await your reply.
 >
@@ -146,7 +150,7 @@ authors: ['default']
 
 > Dear Sir or Madam,
 >
-> I regret to have troubled you, but I must express my dissatisfaction with the *[Item Name]* that I recently purchased from your online store. Upon inspection, I discovered several issues with the product.
+> I regret to have troubled you, but I must express my dissatisfaction with the _[Item Name]_ that I recently purchased from your online store. Upon inspection, I discovered several issues with the product.
 >
 > Firstly, the quality of the item fell far short of my expectations. Upon opening the package, I immediately noticed several noticeable scratches on the screen. Furthermore, I was disappointed by the level of after-sales service provided. When I brought this matter to the attention of the shop assistant, I did not receive a satisfactory resolution.
 >
@@ -160,7 +164,7 @@ authors: ['default']
 
 > **Notice**
 >
-> *December 24, 2023*
+> _December 24, 2023_
 >
 > Professor Smith is seeking a dedicated and enthusiastic student to join his research project on campus sports activities. The successful candidate will be responsible for assisting in the organization and coordination of various sports-related events, conducting surveys, collecting data, and providing administrative support as needed.
 >
