--- a/data/blog/LC_hot100_sol.mdx
+++ b/data/blog/LC_hot100_sol.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'LC Hot 100: Solutions and Notes'
-date: '2026-01-01'
+date: '2026-01-09'
 lastmod: '2026-01-12'
-tags: ['UFUN']
+tags: ['']
 summary: ''
 images: []
 authors: ['default']
