feat: add speed insights

--- a/data/blog/chuiBi.mdx
+++ b/data/blog/chuiBi.mdx
@@ -10,6 +10,13 @@ authors: ['default']
 
 本文持续更新，内容为：想到什么说什么。
 
+---
+
+26.1.13 本站上线，22:44我发的朋友圈。01:44时浏览量500+，bounce rate在40多。
+70%的朋友用ios或mac。pc端与移动端比例4:6。20%人用safari我没想到。
+
+![第一天数据](static/images/articles/chuibi/website1stDay.png)
+
 这学期选了五门课，上课时间较多。课上不足以支撑我完成需要较高专注度的工作，无聊了写文章吹牛逼是个选项。
 
 1.13，失眠，早上七点多睡着，下午两点半的课迟到了。
